MonetDB5/src/mal/Tests/tst802.stable
# Monet Database Server V5.0
# Copyright (c) 1993-2004, CWI. All rights reserved.
# compiled for 32biti686-pc-linux-gnu/32bit.
# config:/ufs/mk/monet_5/src/mal/Tests/tst.conf
# dbfarm:/ufs/mk/monet_5/Linux/var/MonetDB
# dbname:demo
## using spaces
#
#u:str:=const.take("user");
#printf("User bound to %s\n",u);
#
#v:int:= const.take("roomnumber");
#
#v:= 123;
#v:= v+1;
#release("roomnumber",v);
#release("roomnumber",v); # failure? done twice or implicit take?
#
function Admin.main():int;	# 0  (main:int)
    u := const.take("user");	# 1 CONSTtake (u:str)<-($2:str)
    system.printf("User bound to %s\n",u);	# 2 SYSprint_formatted_str ($3:int)<-($4:str)(u:str)
    v := const.take("roomnumber");	# 3 CONSTtake (v:int)<-($6:str)
    v := 123;	# 4  (v:int)<-($7:int)
    v := calc.+(v,1);	# 5 CALCbinaryADDintint (v:int)<-(v:int)($8:int)
    const.release("roomnumber",v);	# 6 CONSTrelease ($9:void)<-($6:str)(v:int)
    const.release("roomnumber",v);	# 7 CONSTrelease ($10:void)<-($6:str)(v:int)
end main;	# 8  
User bound to Admin
!ERROR: MALexception:const.take:failed to take 'roomnumber' from box
>